# bes

./: .gitattributes  .gitignore  CLAUDE.md  MANIFEST.in  README.md  bes.todo  bes_requirements.txt  cc.txt  pyproject.toml  pytest.bat  r  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  t  t.bat  t.ps1
.claude/: settings.local.json
bes_shell/: bes_shell.bash
claude-docs/: bcli-application-autocomplete.md  bes-fs-migration-plan.md  bes-fs-migration.md  bes-pip-project-to-uv-migration.md  bes-platform-abc-framework.md  bf_checksum_progress.md  bf_file_move.md  bfile-media-finder.md  bfile-sync-hangs.md  bfile-sync-progress.md  btask-clean-shutdown.md  btask-timeout-plan.md  execute-with-progress-new.md  execute-with-progress.md  new-btask-progress-plan.md  new-file-checksum-plan.md  new-file-metadata-db-plan.md  simple-config-migration.md  vfs-report.md
claude-sessions/: bes_metadata.sh  bes_system_execute.sh
docker/: #Dockerfile.linux-alpine-3#  Dockerfile.linux-alpine-3
docs/: docker.help  pip_install.help  pip_list.help  pyinstaller.help  ubuntu18.notes  vmrun.help
env/: bes.bescfg  bes_caca.sh  bes_framework.sh  bes_path.sh  bes_setup.sh  bes_testing.sh  bes_venv_activate.bash  bes_venv_activate.cmd  bes_venv_setup.cmd  bes_venv_setup.sh  functions.sh  setup.sh
experiments/: ai_token_estimate.py  aliases  apple_script.py  apple_script_processes.scpt  ast_vs_cst.py  btl_lexer_function_context.py  caller_script.py  code.py  cookie.py  do_vmware_bes_unit_tests.sh  f.c  inspect.py  keyval.toml  lexer.py  macos_quartz.py  process.py  process_name.py  progress.py  progress_spinner.py  quit_vmware.applescript  ramiro_vmware.config  sample_web_server.py  singleton.py  stress_test.sh  tail.py  tast.py  test_python_installation.py  toml.py  vmware_print_inventory.py
fixers/: fix_bes_fs_file_check.sh  fix_bes_fs_file_util.sh
(+3450 files in other folders)
