[project]
name = "bes"
version = "0.1.0"
description = "Bes is good"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filetype>=1.2.0",
    "puremagic>=2.2.0",
    "requests>=2.32.5",
    "xattr>=1.2.0; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
]
