[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bes"
version = "0.1.0"
description = "An experimental collection of modules related to automation and CICD"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ramiro Estrugo", email = "bes@fateware.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "filetype>=1.2.0",
    "puremagic>=2.2.0",
    "requests>=2.32.5",
    "xattr>=1.2.0; sys_platform != 'win32'",
]

[project.urls]
Homepage = "https://gitlab.com/rebuilder/bes"

[project.scripts]
bes_test = "bes.testing.bes_test_runner:main"
bfile-checksum = "bes.files.rsync.bfile_checksum_script:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lib/bes", "lib/_bes_unit_test_common"]
exclude = [".#*"]
